# course

./: CMakeLists.txt  main.c
libs/algorithms/: algorithms.c  algorithms.h
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/matrix_tasks/: matrix_tasks.c  matrix_tasks.h
libs/data_structures/ordered_array_set/: ordered_array_set.c  ordered_array_set.h
libs/data_structures/sortAndDifficultyAssessment/: sortAndDifficultyAssessment.c  sortAndDifficultyAssessment.h
libs/data_structures/string/: CMakeLists.txt  string.c  string.h
libs/data_structures/string/tasks/:  howManyDigitsAreThereSoManySpaces.c   howManyDigitsAreThereSoManySpaces.h  6AreTheWordsLexicographicallyOrdered.c  6AreTheWordsLexicographicallyOrdered.h  7theWordsOfTheStringAreInReverseOrder.c  7theWordsOfTheStringAreInReverseOrder.h  firstLettersThenNumbers.c  firstLettersThenNumbers.h  firstTheNumbersAreInvertedThenTheLetters.c  firstTheNumbersAreInvertedThenTheLetters.h  removeAdjacentEqualLetters.c  removeAdjacentEqualLetters.h  removeNonLetters.c  removeNonLetters.h  replaceAllOccurrencesOfTheWord1WithTheWord2.c  replaceAllOccurrencesOfTheWord1WithTheWord2.h  tasks.c  tasks.h
libs/data_structures/unordered_array_set/: unordered_array_set.c  unordered_array_set.h
